Fix: Path detectors outputting locations w/ wrong offsets in stream mode
While at it improve command prompts: Only compute detections if all criteria are met